--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -1,19 +1,60 @@
 ---
-layout: post
-title: Endurance Sports Stream Analysis (ESStream)
-subtitle: How to obtain and process Endurance Sports Stream Data
-tags: [R, Endurance Sports]
-linktormd: true
-leafletmap: true
-always_allow_html: yes
 output: github_document
-
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
 ```
 
-Endurance Athletes generate tons of data while recording their activities with GPS watch, smartphones or other devices. This package aims to unify the criteria for gathering and pre processing stream data for later analysis. 
+# GPStream
 
+<!-- badges: start -->
+<!-- badges: end -->
 
+The goal of GPStream is to ...
+
+## Installation
+
+You can install the released version of GPStream from [CRAN](https://CRAN.R-project.org) with:
+
+``` r
+install.packages("GPStream")
+```
+
+And the development version from [GitHub](https://github.com/) with:
+
+``` r
+# install.packages("devtools")
+devtools::install_github("raimun2/GPStream")
+```
+## Example
+
+This is a basic example which shows you how to solve a common problem:
+
+```{r example}
+library(GPStream)
+## basic example code
+```
+
+What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+
+```{r cars}
+summary(cars)
+```
+
+You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
+
+You can also embed plots, for example:
+
+```{r pressure, echo = FALSE}
+plot(pressure)
+```
+
+In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
