update agg function

--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -46,15 +46,15 @@ This is a basic example which shows you how to load sample data:
 ```{r sampledata}
 library(GPStream)
 
-act_streams <- strava_streams
+data(strava_streams)
 
-str(act_streams)
+act_streams <- strava_streams
 
 ```
 
 Data can also be loaded from stream files such as GPX or fit files
 
-```{r cars}
+```{r read_stream}
 
 gpx_stream <- read_stream("inst/extdata/gpx_activity.gpx")
 
@@ -68,8 +68,8 @@ str(fit_stream)
 
 As can be seen, not all files contains the same naming convention for coordinates, so we follow the lat, lon, ele, timestamp, time convention for latitude, longitude, elevation and time signature respectively. This convention is implemented in rename_stream() function.
 
-```{r}
-clean_stream1 <- act_streams %>% uniform_stream()
+```{r uniform}
+clean_stream1 <- act_streams %>% uniform_stream() %>% filter(id == unique(act_streams$id)[1])
 
 clean_stream2 <- gpx_stream %>% uniform_stream()
 
@@ -80,7 +80,7 @@ str(clean_stream2)
 ```
 In several occasions elevation readings can be corrupted or missing, so the ele_correction() function is implemented, obtaining elevation data from a digital elevation model (DEM) available in the elevatr package, or in a local DEM if available. 
 
-```{r}
+```{r elevation}
 
 correct_elevation <- clean_stream2 %>% ele_correction(replace = FALSE, z = 14)
 
@@ -92,18 +92,18 @@ ggplot(correct_elevation, aes(x=time)) +
 
 In other cases, even lat and lon values can be corrupted and therefore need smoothing in order to represent distances correctly. Smoothing can be also applied to interpolate a stream and obtaining an even spaced model of the activity
 
-```{r}
+```{r smooth}
 
-smooth_act <- correct_elevation %>% smooth_stream(interpolate = TRUE, alpha = 0.01, replace = TRUE)
+smooth_act <- correct_elevation %>% smooth_stream(interpolate = TRUE, alpha = 0.05, replace = TRUE)
 
 ggplot(correct_elevation, aes(lon, lat)) + 
   geom_point() + 
-  geom_point(data = smooth_act, col="red")
+  geom_point(data = smooth_act, col="red", size=0.7)
 
 ```
 So far we have corrected coordinates, but we can also estimate different differential features, such as slope, distance, elevation gain/loss, speed, etc. For this purposes is the function differential_stream
 
-```{r}
+```{r differential}
 
 diff_stream <- smooth_act %>% differential_stream()
 
@@ -112,16 +112,138 @@ str(diff_stream)
 ```
 We can also compare two streams to check if they correspond to the same route. The match stream function checks the spatial and sequential continuity of a stream with respect to a reference stream.
 
-```{r}
+For example, with matching streams the function returns the first row and length of the first stream where it matches the second one. 
 
-match_stream(clean_stream1, clean_stream2)
+```{r match positive}
 
+data <- clean_stream1
+route <- clean_stream2
+match_stream(data, route)
+
+```
+```{r, echo = FALSE}
+
+ggplot(data, aes(lon, lat)) + 
+  geom_point() + 
+  geom_point(data = route, col="red", size = 0.7)
+
+
+```
+
+If we invert the order of the second stream the function detects it
+
+```{r match invert}
+
+data <- clean_stream1
+route <- clean_stream2[nrow(clean_stream2):1,]
+match_stream(data, route)
+
+
+```
+
+
+```{r, echo = FALSE}
+
+ggplot(data, aes(lon, lat)) + 
+  geom_point() + 
+  geom_point(data = route, col="red", size = 0.7)
+
+
+```
+
+Also detects if first stream matches partially with second stream
+
+```{r match partial}
+
+
+data <- clean_stream1
+route <- act_streams %>% uniform_stream() %>% 
+               filter(id == unique(act_streams$id)[4])
+match_stream(data, route)
+
+
+```
+
+```{r, echo = FALSE}
+
+ggplot(data, aes(lon, lat)) + 
+  geom_point() + 
+  geom_point(data = route, col="red", size = 0.7)
+
+
+```
+
+which is different from intersecting streams which diverges on other ends
+
+```{r match overlap}
+
+data <- clean_stream1
+route <- act_streams %>% uniform_stream() %>% 
+               filter(id == unique(act_streams$id)[15])
+match_stream(data, route)
+```
+
+
+```{r, echo = FALSE}
+
+ggplot(data, aes(lon, lat)) + 
+  geom_point() + 
+  geom_point(data = route, col="red", size = 0.7)
+
+
+```
+
+Finally it also identifies when streams don't intersect at all
+
+```{r match negative}
+data <- clean_stream1
+route <- act_streams %>% uniform_stream() %>% 
+               filter(id == unique(act_streams$id)[20])
+match_stream(data, route)
+```
+
+```{r, echo = FALSE}
+
+ggplot(data, aes(lon, lat)) + 
+  geom_point() + 
+  geom_point(data = route, col="red", size = 0.7)
+
+
+```
+
+
+One can also aggregate segments of streams according to distance or time, and using a direct splitting or rolling window. The following code will produce 60 second segments with direct segmentation
+
+```{r time agg}
+stream_segmentation <- clean_stream2 %>% differential_stream()
+
+straigth_segments <- agg_stream(stream_segmentation, value = "time", size = 60, windowed = FALSE)
+
+glimpse(straigth_segments)
+
+```
+
+This will produce 100 meters segments with direct segmentation
+
+```{r dist agg}
+
+straigth_segments_d <- agg_stream(stream_segmentation, value = "distance", size = 100, windowed = FALSE)
+
+glimpse(straigth_segments_d)
+```
+
+And the following will produce same length segments using rolling window method, see the number of rows produces
+
+```{r window agg}
+windowed_segments_d <- agg_stream(stream_segmentation, value = "distance", size = 100, windowed = TRUE)
+
+glimpse(windowed_segments_d)
 ```
 
 
 In summary, several functions can be combined to read and analyze GPS streams obtained from physical activities or other sources
 
-```{r, message=FALSE, warning=FALSE}
+```{r closure, message=FALSE, warning=FALSE}
 
 clean_stream <- 
   read_stream("inst/extdata/fit_activity.fit") %>% 
